--- a/to-do-list/src/components/Main.css
+++ b/to-do-list/src/components/Main.css
@@ -1,70 +1,13 @@
-.main{
-    background-color: #fff;
-    padding: 30px;
-    margin: 50px auto;
-    max-width: 500px;
-    border-radius: 4px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
-}
-.main h1{
-    font-size: 20px;
-    text-align: center;
+.main {
+  background: #fff;
+  padding: 30px;
+  margin: 50px auto;
+  max-width: 500px;
+  border-radius: 4px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-.form{
-    margin-top: 30px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.main h1 {
+  font-size: 20px;
+  text-align: center;
 }
-.form input[type="text"]{
-    height: 40px;
-    padding: 0 20px;
-    font-size: 20px;
-    border: 1px solid #ccc;
-}
-.form button[type="submit"]{
-    border: none;
-    height: 40px;
-    width: 40px;
-    background: rgb(230, 20, 20);
-    color: #fff;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
-}
-
-.form button[type="submit"]:hover{
-    transform: scale(1.2);
-    transition: ease 0.1s;
-}
-
-.tarefas {
-    margin-top: 30px;
-}
-.tarefas li{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 10px;
-    transition: all 600ms;
-}
-.tarefas li:hover{
-
-    background-color: rgb(216, 166, 175);
-}
-
-.tarefas li .edit{
-    margin-right: 15px ;
-    color: rgb(0, 0, 0);
-    cursor: pointer;
-}
-
-
-.tarefas li .delete{
-    margin-right: 15px ;
-    color: rgb(218, 1, 1);
-    cursor: pointer;
-}
-
